<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <com.markupartist.android.widget.ActionBar
        xmlns:app="http://schemas.android.com/apk/res/com.geolog.activity"
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:title="Geolog" >
    </com.markupartist.android.widget.ActionBar>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/actionbar"
        android:layout_marginTop="30dp" >

        <SlidingDrawer
            android:id="@+id/drawerSearchPoi"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:content="@+id/content"
            android:handle="@+id/handle"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:contentDescription="@string/searchPoiDrawerImage"
                android:id="@+id/handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow" />

            <RelativeLayout
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:orientation="vertical" >

            </RelativeLayout>

        </SlidingDrawer>

        <TextView
            android:id="@+id/search_poi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/searchPoi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="50sp" />

    </RelativeLayout>

   

     <RelativeLayout
         android:id="@+id/RelativeLayout2"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true" >

         <SlidingDrawer
             android:id="@+id/addPoiDrawer"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:content="@+id/content"
             android:handle="@+id/handle"
             android:orientation="horizontal" >

            

             <ImageView
                 android:contentDescription="@string/searchPoiDrawerImage"
                 android:id="@+id/handle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/arrow" />

             <RelativeLayout
                 android:id="@+id/content"
                 android:layout_width="fill_parent"
                 android:layout_height="125dp"
                 android:orientation="vertical" >
             </RelativeLayout>
         </SlidingDrawer>

         <TextView
             android:id="@+id/addPoi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:text="@string/addPoi"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="50sp" />
     </RelativeLayout>

     <ListView
         android:id="@+id/listView1"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/actionbar" >
     </ListView>

</RelativeLayout>